--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "swiper": "^6.2.0"
+    "swiper": "^6.2.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
