--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.11",
     "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
