Add catalogue menu and options basic components. Refactor pages context

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.165",
     "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,7 +20,7 @@
     "typescript": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3002 &&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
