--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.20",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
+    "node": "^14.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
